# VARIANT_EXTRACTION

./: .gitignore  LICENSE  README.md  pyproject.toml  ve_jupyter.ipynb  ve_main.py
LICENCES_thirdparty/: LICENCES_thirdparty.md  cdlib.LICENCE  graphviz.LICENCE  ipykernel.LICENCE  jupyter.LICENCE  npformat.LICENCE  numpy.LICENCE  pandas.LICENCE  pm4py.LICENCE  scikit-learn.LICENCE
data/input/: input-note.txt
data/output/: output-note.txt  variant_calculation.csv  variant_log.csv
evaluation/results/: eva_BPIC13inc.csv  eva_HOSPITAL.csv  eva_SEPSIS.csv
notebooks/: notebook_concisemodels.ipynb  notebook_concisemodels_tutorial.ipynb  notebook_variantextraction.ipynb
requirements/: requirements_base.txt
src/varexpm/: __init__.py
src/varexpm/cm_methods/: __init__.py
src/varexpm/cm_methods/evaluation/: evaluation.py
src/varexpm/cm_methods/patterndefinition/: coalescing.py  ranking.py  stagecreation.py
src/varexpm/cm_methods/visualization/: representativeexecutions.py
src/varexpm/utils/: __init__.py  data_exporting.py  data_importing.py  data_processing.py
src/variant_extraction/: __init__.py
src/variant_extraction/cm_methods/: cm_orchestrator.py  example.py
src/variant_extraction/cm_methods/evaluation/: evaluation.py
src/variant_extraction/cm_methods/patterndefinition/: coalescing.py  communitydetection.py  ranking.py  stagecreation.py
src/variant_extraction/utils/: data_helpers.py  data_importing.py  data_processing.py
ve_methods/: __init__.py  ve_featuregeneration.py  ve_logprocessing.py  ve_propertydefinition.py
(+3 files in other folders)
